# real_estate_agency

./: .flake8  .gitignore  .isort.cfg  README.md  pyproject.toml  requirements.txt
property/: admin.py  models.py  views.py
property/migrations/: 0001_initial.py  0003_flat_new_building.py  0004_auto_20230210_1657.py  0005_complaint.py  0006_flat_like.py  0007_flat_owner_pure_phone.py  0008_auto_20230210_1843.py  0009_auto_20230213_1049.py  0010_auto_20230213_1111.py  0011_auto_20230213_1235.py  0012_auto_20230213_1603.py  0013_auto_20230213_1916.py  0014_auto_20230213_1931.py  0015_auto_20230213_2019.py  0016_auto_20230214_1909.py
real_estate_agency/: settings.py
