[tool.poetry]
name = "real-estate-agency"
version = "0.1.0"
description = ""
authors = ["Danil Nikitin <d.nikitin.dev@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "real_estate_agency"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
django = "2.2.24"
django-phonenumber-field = "5.2.0"
environs = "5.2.1"
dj-database-url = "0.5.0"
phonenumbers = "^8.13.6"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
